--- a/app/src/main/res/layout/activity_add_class.xml
+++ b/app/src/main/res/layout/activity_add_class.xml
@@ -7,20 +7,6 @@
     tools:context=".AddClass">
 
 
-    <EditText
-        android:id="@+id/txtDay"
-        android:layout_width="160dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="104dp"
-        android:layout_marginEnd="72dp"
-        android:backgroundTint="#188FED"
-        android:ems="0"
-        android:hint="day"
-        android:inputType="textPersonName"
-        android:textCursorDrawable="@null"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
         android:id="@+id/textView6"
         android:layout_width="100dp"
@@ -49,21 +35,18 @@
         android:inputType="time"
         android:textCursorDrawable="@null"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtDay" />
+        app:layout_constraintTop_toBottomOf="@+id/daySpinner" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="100dp"
         android:layout_height="50dp"
-        android:layout_marginStart="35dp"
+        android:layout_marginStart="56dp"
         android:layout_marginTop="104dp"
-        android:layout_marginEnd="13dp"
         android:text="Day:"
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/txtDay"
-        app:layout_constraintHorizontal_bias="0.12"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -112,14 +95,6 @@
         app:layout_constraintHorizontal_bias="0.711"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtClass" />
-    <TextView
-        android:id="@+id/txtWarnDay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#CD0C0C"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/txtDay"
-        app:layout_constraintTop_toBottomOf="@+id/txtDay" />
 
     <TextView
         android:id="@+id/txtWarnTime"
@@ -138,5 +113,16 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/txtClass"
         app:layout_constraintTop_toBottomOf="@+id/txtClass" />
+
+    <Spinner
+        android:id="@+id/daySpinner"
+        android:layout_width="160dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="104dp"
+        android:layout_marginEnd="72dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
