--- a/app/src/main/res/layout/fragment_add_lecture.xml
+++ b/app/src/main/res/layout/fragment_add_lecture.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddClass">
-
+>
 
     <TextView
         android:id="@+id/textView6"
@@ -27,15 +25,14 @@
         android:id="@+id/txtTime"
         android:layout_width="160dp"
         android:layout_height="50dp"
-        android:layout_marginTop="32dp"
         android:layout_marginEnd="72dp"
         android:backgroundTint="#188FED"
         android:ems="10"
         android:hint="time"
         android:inputType="time"
         android:textCursorDrawable="@null"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/daySpinner" />
+        app:layout_constraintBottom_toBottomOf="@+id/textView6"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textView5"
@@ -114,15 +111,16 @@
         app:layout_constraintStart_toStartOf="@+id/txtClass"
         app:layout_constraintTop_toBottomOf="@+id/txtClass" />
 
-    <Spinner
-        android:id="@+id/daySpinner"
-        android:layout_width="160dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="104dp"
-        android:layout_marginEnd="72dp"
+    <TextView
+        android:id="@+id/editTextDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="44dp"
+        android:text="Name"
+        app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toTopOf="@+id/textView5"
+        app:layout_constraintVertical_bias="1.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
